@@ -136,6 +136,9 @@ Library
 
 - Issue #21801: Validate that __signature__ is None or an instance of Signature.
 
+- Issue #21923: Prevent AttributeError in distutils.sysconfig.customize_compiler
+  due to possible uninitialized _config_vars.
+
 Build
 -----
 
